[package]
name = "pride-overlay"
description = "overlay pride flags on images"
version = "2.0.0"
edition = "2024"

authors = ["newt <hi@newty.dev>"]
keywords = ["pride", "lgbtq", "flags", "image-processing", "graphics"]
categories = ["graphics", "multimedia::images"]

repository = "https://github.com/isitreallyalive/pride-overlay"
readme = "readme.md"
license-file = "license.md"

[features]
default = ["rayon"]
rayon = ["image/rayon", "imageproc/rayon"]

[dependencies]
bon = "3.8.1"
image = { version = "0.25.8", default-features = false }
imageproc = { version = "0.25.0", default-features = false }
resvg = { version = "0.45.1", default-features = false }

[dev-dependencies]
image = { version = "0.25.8", features = ["webp"] }