[package]
name = "pride-overlay"
version.workspace = true
description = "overlay pride flags on images"
authors.workspace = true
edition.workspace = true

keywords.workspace = true
categories.workspace = true

readme = "../readme.md"
license-file.workspace = true
repository.workspace = true

[features]
default = ["rayon"]
rayon = ["image/rayon", "imageproc/rayon"]

[dependencies]
bon = { workspace = true }
proc = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
resvg = { workspace = true }

[dev-dependencies]
image = { workspace = true, features = ["webp"] }
